# LS_strat

./: .env.shared  .env.template  .gitignore  Monthly_stock_momentum_VAR.xlsx  Monthly_stock_momentum_VAR_forecast_model.py  README.md  backtest.py  capiq_mcap_ts.xlsx  data_for_backtesting.xlsx  long_short.py  macro_data.py  main.py  monte_carlo.py  pip_requirement.txt  portfolio_optimization_model.py  pyproject.toml  seed.py  timeseries_analysis.py  var_analysis.py
db/: db.py
environ/: env.py
fire_cap/: models.py  populate.py  utils.py
fire_cap/analytics/: analytics.py
sql/: schema.sql
